1.继续完善follow集算法，目前仍有bug，但是基本思想和算法已经补齐。 2.更新文档，待完善。